🐛 Fix overflow

--- a/styles/global.css
+++ b/styles/global.css
@@ -10,6 +10,7 @@ body {
   font-family: 'Poppins', sans-serif;
   cursor: none;
   scroll-behavior: smooth;
+  overflow-x: hidden;
 }
 *:hover,
 *:active,
